doc/logfile.txt
Class documentation
<---- javadoc command: ---->
/private/var/folders/kf/vzhs37dx5lbfbvwhh9lgfwhh0000gn/T/AppTranslocation/00AD3BBC-BC11-495E-B23E-091BE2D682B0/d/Greenfoot.app/Contents/JDK/Home/bin/javadoc
-author
-version
-nodeprecated
-protected
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
11
-classpath
/private/var/folders/kf/vzhs37dx5lbfbvwhh9lgfwhh0000gn/T/AppTranslocation/00AD3BBC-BC11-495E-B23E-091BE2D682B0/d/Greenfoot.app/Contents/Resources/Java/greenfoot.jar:/private/var/folders/kf/vzhs37dx5lbfbvwhh9lgfwhh0000gn/T/AppTranslocation/00AD3BBC-BC11-495E-B23E-091BE2D682B0/d/Greenfoot.app/Contents/Resources/Java/bluejcore.jar:/private/var/folders/kf/vzhs37dx5lbfbvwhh9lgfwhh0000gn/T/AppTranslocation/00AD3BBC-BC11-495E-B23E-091BE2D682B0/d/Greenfoot.app/Contents/Resources/Java/bluejeditor.jar:/private/var/folders/kf/vzhs37dx5lbfbvwhh9lgfwhh0000gn/T/AppTranslocation/00AD3BBC-BC11-495E-B23E-091BE2D682B0/d/Greenfoot.app/Contents/Resources/Java/bluejext2.jar:/private/var/folders/kf/vzhs37dx5lbfbvwhh9lgfwhh0000gn/T/AppTranslocation/00AD3BBC-BC11-495E-B23E-091BE2D682B0/d/Greenfoot.app/Contents/Resources/Java/junit-platform-console-standalone-1.5.2.jar:/private/var/folders/kf/vzhs37dx5lbfbvwhh9lgfwhh0000gn/T/AppTranslocation/00AD3BBC-BC11-495E-B23E-091BE2D682B0/d/Greenfoot.app/Contents/Resources/Java/junit-quickcheck-core-0.9.jar:/private/var/folders/kf/vzhs37dx5lbfbvwhh9lgfwhh0000gn/T/AppTranslocation/00AD3BBC-BC11-495E-B23E-091BE2D682B0/d/Greenfoot.app/Contents/Resources/Java/junit-jupiter-migrationsupport-5.5.2.jar:/private/var/folders/kf/vzhs37dx5lbfbvwhh9lgfwhh0000gn/T/AppTranslocation/00AD3BBC-BC11-495E-B23E-091BE2D682B0/d/Greenfoot.app/Contents/Resources/Java/junit-platform-runner-1.5.2.jar:/private/var/folders/kf/vzhs37dx5lbfbvwhh9lgfwhh0000gn/T/AppTranslocation/00AD3BBC-BC11-495E-B23E-091BE2D682B0/d/Greenfoot.app/Contents/Resources/Java/junit-jupiter-params-5.5.2.jar:/private/var/folders/kf/vzhs37dx5lbfbvwhh9lgfwhh0000gn/T/AppTranslocation/00AD3BBC-BC11-495E-B23E-091BE2D682B0/d/Greenfoot.app/Contents/Resources/Java/junit-platform-testkit-1.5.2.jar:/private/var/folders/kf/vzhs37dx5lbfbvwhh9lgfwhh0000gn/T/AppTranslocation/00AD3BBC-BC11-495E-B23E-091BE2D682B0/d/Greenfoot.app/Contents/Resources/Java/junit-jupiter-api-5.5.2.jar:/private/var/folders/kf/vzhs37dx5lbfbvwhh9lgfwhh0000gn/T/AppTranslocation/00AD3BBC-BC11-495E-B23E-091BE2D682B0/d/Greenfoot.app/Contents/Resources/Java/junit-platform-console-1.5.2.jar:/private/var/folders/kf/vzhs37dx5lbfbvwhh9lgfwhh0000gn/T/AppTranslocation/00AD3BBC-BC11-495E-B23E-091BE2D682B0/d/Greenfoot.app/Contents/Resources/Java/junit-jupiter-engine-5.5.2.jar:/private/var/folders/kf/vzhs37dx5lbfbvwhh9lgfwhh0000gn/T/AppTranslocation/00AD3BBC-BC11-495E-B23E-091BE2D682B0/d/Greenfoot.app/Contents/Resources/Java/junit-platform-suite-api-1.5.2.jar:/private/var/folders/kf/vzhs37dx5lbfbvwhh9lgfwhh0000gn/T/AppTranslocation/00AD3BBC-BC11-495E-B23E-091BE2D682B0/d/Greenfoot.app/Contents/Resources/Java/junit-vintage-engine-5.5.2.jar:/private/var/folders/kf/vzhs37dx5lbfbvwhh9lgfwhh0000gn/T/AppTranslocation/00AD3BBC-BC11-495E-B23E-091BE2D682B0/d/Greenfoot.app/Contents/Resources/Java/junit-platform-reporting-1.5.2.jar:/private/var/folders/kf/vzhs37dx5lbfbvwhh9lgfwhh0000gn/T/AppTranslocation/00AD3BBC-BC11-495E-B23E-091BE2D682B0/d/Greenfoot.app/Contents/Resources/Java/junit-jupiter-5.5.2.jar:/private/var/folders/kf/vzhs37dx5lbfbvwhh9lgfwhh0000gn/T/AppTranslocation/00AD3BBC-BC11-495E-B23E-091BE2D682B0/d/Greenfoot.app/Contents/Resources/Java/junit-platform-engine-1.5.2.jar:/private/var/folders/kf/vzhs37dx5lbfbvwhh9lgfwhh0000gn/T/AppTranslocation/00AD3BBC-BC11-495E-B23E-091BE2D682B0/d/Greenfoot.app/Contents/Resources/Java/junit-platform-launcher-1.5.2.jar:/private/var/folders/kf/vzhs37dx5lbfbvwhh9lgfwhh0000gn/T/AppTranslocation/00AD3BBC-BC11-495E-B23E-091BE2D682B0/d/Greenfoot.app/Contents/Resources/Java/junit-platform-commons-1.5.2.jar:/private/var/folders/kf/vzhs37dx5lbfbvwhh9lgfwhh0000gn/T/AppTranslocation/00AD3BBC-BC11-495E-B23E-091BE2D682B0/d/Greenfoot.app/Contents/Resources/Java/hamcrest-core-1.3.jar:/private/var/folders/kf/vzhs37dx5lbfbvwhh9lgfwhh0000gn/T/AppTranslocation/00AD3BBC-BC11-495E-B23E-091BE2D682B0/d/Greenfoot.app/Contents/Resources/Java/bluej.jar:/private/var/folders/kf/vzhs37dx5lbfbvwhh9lgfwhh0000gn/T/AppTranslocation/00AD3BBC-BC11-495E-B23E-091BE2D682B0/d/Greenfoot.app/Contents/Resources/Java/classgraph-4.8.90.jar:/private/var/folders/kf/vzhs37dx5lbfbvwhh9lgfwhh0000gn/T/AppTranslocation/00AD3BBC-BC11-495E-B23E-091BE2D682B0/d/Greenfoot.app/Contents/Resources/Java/diffutils-1.2.1.jar:/private/var/folders/kf/vzhs37dx5lbfbvwhh9lgfwhh0000gn/T/AppTranslocation/00AD3BBC-BC11-495E-B23E-091BE2D682B0/d/Greenfoot.app/Contents/Resources/Java/commons-logging-api-1.1.2.jar:/private/var/folders/kf/vzhs37dx5lbfbvwhh9lgfwhh0000gn/T/AppTranslocation/00AD3BBC-BC11-495E-B23E-091BE2D682B0/d/Greenfoot.app/Contents/Resources/Java/jl1.0.1.jar:/private/var/folders/kf/vzhs37dx5lbfbvwhh9lgfwhh0000gn/T/AppTranslocation/00AD3BBC-BC11-495E-B23E-091BE2D682B0/d/Greenfoot.app/Contents/Resources/Java/opencsv-2.3.jar:/private/var/folders/kf/vzhs37dx5lbfbvwhh9lgfwhh0000gn/T/AppTranslocation/00AD3BBC-BC11-495E-B23E-091BE2D682B0/d/Greenfoot.app/Contents/Resources/Java/xom-1.2.9.jar:/private/var/folders/kf/vzhs37dx5lbfbvwhh9lgfwhh0000gn/T/AppTranslocation/00AD3BBC-BC11-495E-B23E-091BE2D682B0/d/Greenfoot.app/Contents/Resources/Java/lang-stride.jar:/private/var/folders/kf/vzhs37dx5lbfbvwhh9lgfwhh0000gn/T/AppTranslocation/00AD3BBC-BC11-495E-B23E-091BE2D682B0/d/Greenfoot.app/Contents/Resources/Java/nsmenufx-2.1.8.jar:/private/var/folders/kf/vzhs37dx5lbfbvwhh9lgfwhh0000gn/T/AppTranslocation/00AD3BBC-BC11-495E-B23E-091BE2D682B0/d/Greenfoot.app/Contents/Resources/Java/richtextfx-fat-0.9.0.jar:/private/var/folders/kf/vzhs37dx5lbfbvwhh9lgfwhh0000gn/T/AppTranslocation/00AD3BBC-BC11-495E-B23E-091BE2D682B0/d/Greenfoot.app/Contents/Resources/Java/guava-17.0.jar:/private/var/folders/kf/vzhs37dx5lbfbvwhh9lgfwhh0000gn/T/AppTranslocation/00AD3BBC-BC11-495E-B23E-091BE2D682B0/d/Greenfoot.app/Contents/Resources/Java/httpclient-4.1.1.jar:/private/var/folders/kf/vzhs37dx5lbfbvwhh9lgfwhh0000gn/T/AppTranslocation/00AD3BBC-BC11-495E-B23E-091BE2D682B0/d/Greenfoot.app/Contents/Resources/Java/httpcore-4.1.jar:/private/var/folders/kf/vzhs37dx5lbfbvwhh9lgfwhh0000gn/T/AppTranslocation/00AD3BBC-BC11-495E-B23E-091BE2D682B0/d/Greenfoot.app/Contents/Resources/Java/httpmime-4.1.1.jar:/private/var/folders/kf/vzhs37dx5lbfbvwhh9lgfwhh0000gn/T/AppTranslocation/00AD3BBC-BC11-495E-B23E-091BE2D682B0/d/Greenfoot.app/Contents/Resources/Java/javafx/lib/javafx.base.jar:/private/var/folders/kf/vzhs37dx5lbfbvwhh9lgfwhh0000gn/T/AppTranslocation/00AD3BBC-BC11-495E-B23E-091BE2D682B0/d/Greenfoot.app/Contents/Resources/Java/javafx/lib/javafx.controls.jar:/private/var/folders/kf/vzhs37dx5lbfbvwhh9lgfwhh0000gn/T/AppTranslocation/00AD3BBC-BC11-495E-B23E-091BE2D682B0/d/Greenfoot.app/Contents/Resources/Java/javafx/lib/javafx.fxml.jar:/private/var/folders/kf/vzhs37dx5lbfbvwhh9lgfwhh0000gn/T/AppTranslocation/00AD3BBC-BC11-495E-B23E-091BE2D682B0/d/Greenfoot.app/Contents/Resources/Java/javafx/lib/javafx.graphics.jar:/private/var/folders/kf/vzhs37dx5lbfbvwhh9lgfwhh0000gn/T/AppTranslocation/00AD3BBC-BC11-495E-B23E-091BE2D682B0/d/Greenfoot.app/Contents/Resources/Java/javafx/lib/javafx.media.jar:/private/var/folders/kf/vzhs37dx5lbfbvwhh9lgfwhh0000gn/T/AppTranslocation/00AD3BBC-BC11-495E-B23E-091BE2D682B0/d/Greenfoot.app/Contents/Resources/Java/javafx/lib/javafx.properties.jar:/private/var/folders/kf/vzhs37dx5lbfbvwhh9lgfwhh0000gn/T/AppTranslocation/00AD3BBC-BC11-495E-B23E-091BE2D682B0/d/Greenfoot.app/Contents/Resources/Java/javafx/lib/javafx.swing.jar:/private/var/folders/kf/vzhs37dx5lbfbvwhh9lgfwhh0000gn/T/AppTranslocation/00AD3BBC-BC11-495E-B23E-091BE2D682B0/d/Greenfoot.app/Contents/Resources/Java/javafx/lib/javafx.web.jar:/Users/girishdas/Desktop/APCSA/GreenfootSeatingChartMaster2021-22-master
-d
/Users/girishdas/Desktop/APCSA/GreenfootSeatingChartMaster2021-22-master/doc
-encoding
UTF-8
-charset
UTF-8
/Users/girishdas/Desktop/APCSA/GreenfootSeatingChartMaster2021-22-master/BibekDas.java
<---- end of javadoc command ---->
Loading source file /Users/girishdas/Desktop/APCSA/GreenfootSeatingChartMaster2021-22-master/BibekDas.java...
/Users/girishdas/Desktop/APCSA/GreenfootSeatingChartMaster2021-22-master/BibekDas.java:2: error: <identifier> expected
import   // (World, Actor, GreenfootImage, Greenfoot and MouseInfo)
      ^
1 error
